# dioxus-tests

./: .gitignore  Cargo.toml  Dioxus.toml  input.css  tailwind.config.js
src/: main.rs
