[package]
name = "dioxus-tests"
version = "0.1.0"
authors = ["leon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/LeWimbes/dioxus", branch = "base-path-links-fix", features = ["web", "router"] }
web-sys = { version = "0.3.70", features = ["ScrollToOptions"] }

# Debug
dioxus-logger = "0.5.1"
